# Font-vector-art-rendering

./: .gitignore  CMakeLists.txt  README.md  build.bat  test_font.cpp
shaders/: font_shader.hlsl
src/: camera2d.cpp  camera2d.h  font_processor.cpp  font_processor.h  main.cpp
